Archive2/b8/bde7751f3c2c0c/output
main.cpp:8:30: error: reference 'str' is not yet bound to a value when used within its own initialization [-Werror,-Wuninitialized]
    const std::string& str = str; // !!
                       ~~~   ^~~
1 error generated.
